added project dependencies and READme file

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet"href="style.css">
-    <script src="index.js"defer></script>
+    <!-- <script type="module" src="index.js" defer></script> -->
 </head>
 <body>
     <div id="root">
+        hey
+        Lorem ipsum dolor sit amet.
 
 
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">
 
     </script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
 
-    </script>
+    </script> -->
+    <script type="module"src="index.js"></script>
 </body>
 </html>
