--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
 
     </script> -->
-    <script type="module"src="index.js"></script>
+    <script type="module"src="index.js" defer></script>
 </body>
 </html>
